\name{GenomicTuplesnews}
\title{GenomicTuples News}
\encoding{UTF-8}

\section{Version 1.1.14}{

\itemize{

\item Switched to a html vignette from a pdf one.

}}

\section{Version 0.99.1}{

Addressing comments made in Bioconductor code review.

\itemize{

\item Added missing \code{Value} sections to \code{GTuples-comparison.Rd} and 
\code{intra-tuple-methods.Rd}.
\item Improved description of \code{findOverlaps,GTuples,GTuples-method} and 
what it means for two tuples to overlap. In particular, included a reference to 
the vignette which uses examples to explain these definitions.
\item Included in the vignette my motivation for creating the 
\code{GenomicTuples} package.
}}

\section{Version 0.99.0}{\itemize{

\item Initial version submitted to Bioconductor.

}}