@@ -30,11 +30,6 @@
 \alias{reduce,GTuples-method}
 \alias{reduce,GTuplesList-method}
 
-% mapCoords methods
-\alias{mapCoords,GTuples,GTuplesList-method}
-\alias{mapCoords,GTuples,GTuples-method}
-\alias{pmapCoords,GTuples,GTuplesList-method}
-
 % setops methods
 \alias{Ops,GTuples,numeric-method}
 \alias{intersect,GTuples,GTuples-method}
