@@ -2,6 +2,15 @@
 \title{GenomicTuples News}
 \encoding{UTF-8}
 
+\section{Version 1.5.2}{
+\itemize{
+
+\item After being deprecated from GenomicRanges in BioC 3.1, mapCoords() and 
+      pmapCoords() are now defunct.
+\item After being deprecated in BioC 3.1, the "intervaltree" algorithm in 
+      findOverlaps() is now defunct.
+}}
+
 \section{Version 1.1.14}{
 
 \itemize{
